📚 update and delete openings routes
